# origami-auth

./: README.md  conftest.py  pyproject.toml
docs/: tarmar-studio-integration.md
origami_auth/: __init__.py  apps.py  mixins.py  models.py  urls.py  views.py
origami_auth/migrations/: 0002_user_discord_user_is_dm_user_is_player_and_more.py
origami_auth/templates/origami_auth/: login.html  register.html  users_list.html
tarmar_auth/: views.py
tests/: settings.py  test_accounts.py  test_auth.py  urls.py
